Better organization of virtual POS view files

--- a/packages/pos/simulator/view/POS.html
+++ b/packages/pos/simulator/view/POS.html
@@ -27,11 +27,11 @@
 <script>
   export default {
     components: {
-      Printer: './Printer.html',
-      Keypad: './Keypad.html',
-      Screen: './Screen.html',
-      Card: './CreditCard.html',
-      ControlPanel: './ControlPanel.html',
+      Printer: './partials/Printer.html',
+      Keypad: './partials/Keypad.html',
+      Screen: './partials/Screen.html',
+      Card: './partials/CreditCard.html',
+      ControlPanel: './partials/ControlPanel.html',
     },
     data() {
       return {
