--- a/packages/pos/simulator/view/partials/ControlPanel.html
+++ b/packages/pos/simulator/view/partials/ControlPanel.html
@@ -18,7 +18,7 @@
 </div>
 
 <script>
-  import { State, log } from '../index.js';
+  import { State, log } from '../../index.js';
 
   export default {
     components: {
