--- a/packages/pos/simulator/view/partials/CreditCard.html
+++ b/packages/pos/simulator/view/partials/CreditCard.html
@@ -1,7 +1,7 @@
 <div class="credit-card {isCardInserted ? 'is-inserted' : ''}" on:click="toggleCard()"></div>
 
 <script>
-  import Payment from '../../api/payment.js';
+  import Payment from '../../../api/payment.js';
 
   export default {
     data() {
@@ -40,7 +40,7 @@
     left: 45px;
     top: 780px;
     z-index: 1;
-    background-image: url(./assets/creditcard.png);
+    background-image: url(../assets/creditcard.png);
     cursor: pointer;
     transition: transform 0.3s ease, filter 0.3s ease;
     filter: drop-shadow(8px 8px 2px rgba(0, 0, 0, 0.5));
