--- a/packages/pos/simulator/view/partials/Keypad.html
+++ b/packages/pos/simulator/view/partials/Keypad.html
@@ -17,7 +17,7 @@
 </div>
 
 <script>
-  import Keyboard from '../../api/keyboard.js';
+  import Keyboard from '../../../api/keyboard.js';
 
   export default {
     methods: {
