Add style helpers. Start with h-fixed-bottom

--- a/packages/styles/pos.pcss
+++ b/packages/styles/pos.pcss
@@ -4,4 +4,4 @@
 @import 'src/fonts.pcss';
 @import 'src/base.pcss';
 @import 'src/typography.pcss';
-@import 'src/tables.pcss';
+@import 'src/helpers.pcss';
