Add h-flex-row helper

--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -6,3 +6,6 @@ $default-text-color: $grey-darker;
 /** Fonts */
 $default-font-family: 'Roboto', Arial, sans-serif;
 $default-font-size: 14px;
+
+/** Spacing */
+$row-padding: 12px 15px;
