--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -17,7 +17,7 @@ $grey-darker: #353535;
 $grey-dark: #494949;
 $grey: #757575;
 $grey-light: #b5b5b5;
-$grey-lighter: #dbdbdb;
+$grey-lighter: #e3e6e7;
 $grey-lightest: #f4f4f4;
 
 $purple: #ab47bc;
