--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -10,3 +10,11 @@ $default-font-size: 14px;
 /** Spacing */
 $row-padding: 12px 15px;
 $row-border-color: $grey-lighter;
+
+/** Layers */
+$layer-dialog: 1000;
+$layer-dialog-fullscreen: 1002;
+$layer-appbar: 1001;
+
+/** Appbar */
+$appbar-height: 38px;
