--- a/packages/components/Dialog/src/ConfirmationDialog.html
+++ b/packages/components/Dialog/src/ConfirmationDialog.html
@@ -27,11 +27,8 @@
       };
     },
     computed: {
-      _dialogProps(props) {
-        const tmp = Object.assign({}, props);
-        delete tmp.negativeLabel;
-        delete tmp.positiveLabel;
-        return tmp;
+      _dialogProps({ negativeLabel, positiveLabel, ...props }) {
+        return props;
       },
     },
     methods: {
