Add default width to button

--- a/packages/components/Button/src/Button.html
+++ b/packages/components/Button/src/Button.html
@@ -18,6 +18,7 @@
         bgColor: '4ebf1a',
         /** Border color */
         borderColor: null,
+        width: null,
       };
     },
     computed: {
