--- a/packages/styles/src/base.pcss
+++ b/packages/styles/src/base.pcss
@@ -10,9 +10,9 @@
 
 body {
   background-color: #fff;
-  color: $black;
-  font-family: $mamba-font-family;
-  font-size: $mamba-font-size-default;
+  color: $default-text-color;
+  font-family: $default-font-family;
+  font-size: $default-font-size;
   font-style: normal;
   font-weight: normal;
   line-height: 1.4;
