--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -1,7 +1,8 @@
 <label
   class="input -{type} {readable ? 'is-readable' : ''}"
   style="background-color: {bgColor}; color: {textColor};"
-  on:mousedown="onMousedown(event)"
+  on:mousedown="_onMousedown(event)"
+  ref:container
 >
   {#if label}
     <span>{label}</span>
@@ -13,10 +14,10 @@
     type={_visible ? 'text' : 'password'}
     style="color: {textColor};"
     {disabled}
-    on:focus="onFocus()"
-    on:blur="onBlur()"
-    on:keyup="onKeyUp(event)"
-    on:input="set({ value: this.value })"
+    on:focus="_onFocus()"
+    on:blur="_onBlur()"
+    on:keyup="_onKeyUp(event)"
+    on:input="_onInput(event)"
   />
 
   {#if type === 'password' && readable}
@@ -53,7 +54,7 @@
         autofocus: false,
         disabled: false,
         bgColor: '#fff',
-        textColor: '#4a4a4a',
+        textColor: '#757575',
         errorColor: '#d50000',
       };
     },
@@ -87,19 +88,11 @@
     methods: {
       /** Prepend text to the input */
       prepend(value) {
-        this.refs.input.value = value + this.refs.input.value;
+        this.set({ value: value + this.get().value });
       },
       /** Append text to the input */
       append(value) {
-        this.refs.input.value += value;
-      },
-      /** Set or get the input value */
-      value(inputValue) {
-        const inputEl = this.refs.input;
-        if (inputValue != null) {
-          inputEl.value = inputValue;
-        }
-        return inputEl.value;
+        this.set({ value: this.get().value + value });
       },
       focus() {
         this.refs.input.focus();
@@ -108,23 +101,27 @@
         this.refs.input.blur();
       },
       // TODO: when '_visible' changes, it triggers a focus
-      onFocus() {
+      _onFocus() {
         const { alphanumeric } = this.get();
+        this.refs.container.classList.add('is-focused');
         if (alphanumeric) {
           Keyboard.setKeyboardAsAlphanumeric();
         } else {
           Keyboard.setKeyboardAsNumeric();
         }
       },
-      onBlur() {
+      _onBlur() {
         const { alphanumeric } = this.get();
+        this.refs.container.classList.remove('is-focused');
         if (alphanumeric) {
           Keyboard.setKeyboardAsNumeric();
         }
       },
-      onKeyUp(e) {
+      _onKeyUp(e) {
         const key = Keyboard.getKeyName(e.keyCode);
+
         this.fire('keyup');
+
         if (key === 'enter') {
           if (this.validate()) {
             this.fire('valid');
@@ -135,8 +132,12 @@
           this.fire('submit');
         }
       },
+      _onInput(e) {
+        this.set({ value: this.refs.input.value });
+        this.fire('input', e);
+      },
       /** We use mousedown instead of click because it fires before the input's .focus() */
-      onMousedown() {
+      _onMousedown() {
         const { type, _visible, readable } = this.get();
         /** Change password visibility only if element is focused */
         if (
@@ -175,10 +176,16 @@
     width: 100%;
     padding: 10px 15px;
     background-color: #fff;
-  }
+    transition: 0.3s ease border-bottom;
+    border-bottom: 2px solid transparent;
 
-  .input.is-readable input {
-    padding-right: 40px;
+    &.is-readable input {
+      padding-right: 40px;
+    }
+
+    &.is-focused {
+      border-bottom-color: #4ebf1a;
+    }
   }
 
   span {
