--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -15,9 +15,9 @@ $green-payment: #429841;
 
 $grey-darker: #353535;
 $grey-dark: #494949;
-$grey: #8c8c8c;
+$grey: #757575;
 $grey-light: #b5b5b5;
-$grey-lighter: #dbdbdb;
+$grey-lighter: #e3e6e7;
 $grey-lightest: #f4f4f4;
 
 $purple: #ab47bc;
