--- a/packages/styles/pos.pcss
+++ b/packages/styles/pos.pcss
@@ -1,8 +1,7 @@
-@import 'colors.pcss';
-@import 'src/variables.pcss';
+@import 'theme.pcss';
 @import 'src/reset.pcss';
 @import 'src/normalize.pcss';
 @import 'src/fonts.pcss';
 @import 'src/base.pcss';
 @import 'src/typography.pcss';
-@import 'src/tables.pcss';
+@import 'src/helpers.pcss';
