Add visual dumb components css (ui-row)

--- a/packages/styles/src/helpers.pcss
+++ b/packages/styles/src/helpers.pcss
@@ -5,8 +5,18 @@
   width: 100%;
 }
 
-.h-flex-row {
-  padding: $row-padding;
-  display: flex;
-  justify-content: space-between;
+.h-color-gray-darker {
+  color: $gray-darker;
+}
+
+.h-color-gray {
+  color: $gray;
+}
+
+.h-color-gray-lighter {
+  color: $gray-lighter;
+}
+
+.h-color-gray-lightest {
+  color: $gray-lightest;
 }
