--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -1,15 +1,8 @@
 @import 'colors.pcss';
 
-/** Colors */
-$default-text-color: $grey-darker;
-
 /** Fonts */
 $default-font-family: 'Roboto', Arial, sans-serif;
 $default-font-size: 14px;
-
-/** Spacing */
-$row-padding: 12px 15px;
-$row-border-color: $grey-lighter;
 
 /** Layers */
 $layer-dialog: 1000;
@@ -18,3 +11,14 @@ $layer-appbar: 1001;
 
 /** UI */
 $appbar-height: 38px;
+
+/** Spacing */
+$row-padding: 12px 15px;
+
+/** Colors */
+$default-text-color: $gray-darker;
+
+$row-border-color: $gray-lighter;
+
+$input-border-color: $gray-lighter;
+$input-focus-border-color: $stone-green;
