--- a/packages/components/Dialog/src/Dialog.html
+++ b/packages/components/Dialog/src/Dialog.html
@@ -26,6 +26,7 @@
         bgColor: '#e3e3e3',
         textColor: '#353535',
         align: 'center',
+        fullscreen: false,
       };
     },
     computed: {
