--- a/packages/components/Switch/src/Switch.html
+++ b/packages/components/Switch/src/Switch.html
@@ -1,11 +1,11 @@
-<label class="switch" {checked} {disabled} >
-  <input
+<label class="switch" {checked} {disabled}>
+	<input
     type="checkbox"
     {disabled}
     bind:checked
     on:change="fire('change', { value: checked })"
     data-controller-trigger="click"
-  />
+	/>
 </label>
 
 <script>
@@ -19,16 +19,16 @@
   };
 </script>
 
-<style>
+<style type="text/postcss">
   @import '@mamba/styles/colors.pcss';
 
   $checked-icon-border: $green;
   $checked-bar-bg: $green;
   $unchecked-icon-bg: $white;
-  $unchecked-icon-border: $blue-grey-dark;
-  $unchecked-bar-bg: $blue-grey-dark;
-  $disabled-icon-border: $grey-light;
-  $disabled-bar-bg: $grey-lighter;
+  $unchecked-icon-border: $blue-gray-dark;
+  $unchecked-bar-bg: $blue-gray-dark;
+  $disabled-icon-border: $gray-light;
+  $disabled-bar-bg: $gray-lighter;
 
   input { display: none; }
 
