Make the whole body the same background color as an app

--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -6,6 +6,8 @@ $gray: #757575;
 $gray-lighter: #e3e6e7;
 $gray-lightest: #f1f2f3;
 
+$red-light: #ef5152;
+
 /* --- */
 
 $black: #000;
@@ -29,7 +31,6 @@ $gray-light: #b5b5b5;
 $purple: #ab47bc;
 $purple-dark: #790e8b;
 $purple-light: #df78ef;
-
 $red: #ff1a1a;
 $red-dark: #d50000;
 
