--- a/packages/styles/pos.pcss
+++ b/packages/styles/pos.pcss
@@ -1,4 +1,4 @@
-@import 'theme.pcss';
+@import './theme.pcss';
 @import 'src/setup/reset.pcss';
 @import 'src/setup/normalize.pcss';
 @import 'src/setup/fonts.pcss';
@@ -6,3 +6,7 @@
 @import 'src/base.pcss';
 @import 'src/helpers.pcss';
 @import 'src/components/*.pcss';
+
+body {
+  background-color: $app-bg-color;
+}
