--- a/packages/styles/desktop.pcss
+++ b/packages/styles/desktop.pcss
@@ -1,4 +1,11 @@
-@import 'pos.pcss';
+@import './theme.pcss';
+@import 'src/setup/reset.pcss';
+@import 'src/setup/normalize.pcss';
+@import 'src/setup/fonts.pcss';
+@import 'src/setup/typography.pcss';
+@import 'src/base.pcss';
+@import 'src/helpers.pcss';
+@import 'src/components/*.pcss';
 @import 'src/desktop/normalize.pcss';
 @import 'src/desktop/base.pcss';
 @import 'src/desktop/tables.pcss';
