--- a/packages/styles/theme.pcss
+++ b/packages/styles/theme.pcss
@@ -16,9 +16,14 @@ $appbar-height: 38px;
 $row-padding: 12px 15px;
 
 /** Colors */
+$app-bg-color: $gray-lighter;
+
 $default-text-color: $gray-darker;
 
 $row-border-color: $gray-lighter;
 
 $input-border-color: $gray-lighter;
 $input-focus-border-color: $stone-green;
+
+$dialog-negative-color: $red-light;
+$dialog-positive-color: $stone-green;
