Align components styles with invision layout

--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -161,9 +161,11 @@
   };
 </script>
 
-<style>
+<style type="text/postcss">
+  @import '@mamba/styles/theme.pcss';
+
   .app {
     height: 100%;
-    background-color: #e3e6e7;
+    background-color: $app-bg-color;
   }
 </style>
