--- a/packages/components/AppBar/src/AppBar.html
+++ b/packages/components/AppBar/src/AppBar.html
@@ -119,7 +119,7 @@
     overflow: hidden;
     color: inherit;
     font-size: 14px;
-    line-height: 13px;
+    line-height: 1;
     font-weight: 600;
     text-align: center;
     text-transform: uppercase;
