Force the printable content to have the width of the paper

--- a/packages/components/Printable/src/Printable.html
+++ b/packages/components/Printable/src/Printable.html
@@ -1,4 +1,4 @@
-<div class="printable" style="max-width: {_paperWidth};">
+<div class="printable" style="width: {_paperWidth};">
   <div class="content" ref:printableContent>
     <slot></slot>
   </div>
@@ -104,6 +104,7 @@
   }
 
   .content {
+    background-color: #fff;
     padding-bottom: 10px;
 
     &,
