Remove dotted border from inputs

--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -229,7 +229,7 @@
     border: none;
     font-size: 30px;
     height: 36px;
-    border-bottom: 1px dotted #dedede;
+    /* border-bottom: 1px dotted #dedede; */
   }
 
   input:not(.-left) {
