--- a/packages/components/Input/src/Input.html
+++ b/packages/components/Input/src/Input.html
@@ -13,8 +13,8 @@
     class="-{align}"
     type={_visible ? 'text' : 'password'}
     style="color: {textColor};" {disabled}
-    on:focus="_onFocus()"
-    on:blur="_onBlur()"
+    on:focus="_onFocus(event)"
+    on:blur="_onBlur(event)"
     on:keyup="_onKeyUp(event)"
     on:input="_onInput(event)"
   />
@@ -48,7 +48,10 @@
         _visible: true,
         alphanumeric: false,
         readable: false,
+        /** Automatically focus the input */
         autofocus: false,
+        /** Force the to be focused */
+        forceFocus: false,
         disabled: false,
         /** Style */
         type: 'text',
@@ -119,8 +122,14 @@
           Keyboard.setKeyboardAsNumeric();
         }
       },
-      _onBlur() {
-        const { alphanumeric } = this.get();
+      _onBlur(e) {
+        const { alphanumeric, forceFocus } = this.get();
+        if(forceFocus) {
+          e.stopImmediatePropagation()
+          e.preventDefault()
+          this.focus()
+          return
+        }
         this.refs.container.classList.remove('is-focused');
         if (alphanumeric) {
           Keyboard.setKeyboardAsNumeric();
@@ -142,6 +151,7 @@
               this.blur();
             }
           }
+          this.fire(this.get().isValid ? 'submitValid' : 'submitInvalid');
           this.fire('submit');
         }
       },
@@ -156,7 +166,6 @@
               : this._getValidationResult()
 
             this.set({ value, ...validationResult });
-            this.fire(validationResult.isValid ? 'valid' : 'invalid');
           } else {
             this.set({ value, isValid: false, _errorMsg: undefined })
           }
