--- a/packages/components/Dialog/src/Dialog.html
+++ b/packages/components/Dialog/src/Dialog.html
@@ -3,7 +3,7 @@
     <div class="content -align-{align}">
       <div class="message">
         {#if title}
-        <div class="title">{title}</div>
+          <div class="title">{title}</div>
         {/if}
         <slot></slot>
       </div>
@@ -26,6 +26,7 @@
         bgColor: '#e3e3e3',
         textColor: '#353535',
         align: 'center',
+        fullscreen: false,
       };
     },
     computed: {
@@ -129,14 +130,14 @@
   }
 
   .message {
-    font-size: 18px;
+    font-size: 16px;
+    line-height: 1.23;
   }
 
   .title {
     max-width: 80%;
     margin: 0 auto 5px;
-    font-size: 23px;
-    line-height: 1.4;
+    font-size: 22px;
     font-weight: bold;
   }
 </style>
