--- a/packages/styles/pos.pcss
+++ b/packages/styles/pos.pcss
@@ -1,7 +1,12 @@
-@import 'theme.pcss';
-@import 'src/reset.pcss';
-@import 'src/normalize.pcss';
-@import 'src/fonts.pcss';
+@import './theme.pcss';
+@import 'src/setup/reset.pcss';
+@import 'src/setup/normalize.pcss';
+@import 'src/setup/fonts.pcss';
+@import 'src/setup/typography.pcss';
 @import 'src/base.pcss';
-@import 'src/typography.pcss';
 @import 'src/helpers.pcss';
+@import 'src/components/*.pcss';
+
+body {
+  background-color: $app-bg-color;
+}
