--- a/packages/styles/colors.pcss
+++ b/packages/styles/colors.pcss
@@ -1,29 +1,36 @@
+$stone-green: #4fb341;
+$stone-green-dark: #153522;
+
+$gray-darker: #353535;
+$gray: #757575;
+$gray-lighter: #e3e6e7;
+$gray-lightest: #f1f2f3;
+
+$red-light: #ef5152;
+
+/* --- */
+
 $black: #000;
 $white: #fff;
 
 $blue: #2196f3;
 $blue-dark: #1565c0;
 
-$blue-grey-light: #90a4ae;
-$blue-grey: #607d8b;
-$blue-grey-dark: #455a64;
+$blue-gray-light: #90a4ae;
+$blue-gray: #607d8b;
+$blue-gray-dark: #455a64;
 
 $green: #4ebf1a;
 $grean-light: #4caf50;
 $green-dark: #3da10f;
 $green-payment: #429841;
 
-$grey-darker: #353535;
-$grey-dark: #494949;
-$grey: #757575;
-$grey-light: #b5b5b5;
-$grey-lighter: #e3e6e7;
-$grey-lightest: #f4f4f4;
+$gray-dark: #494949;
+$gray-light: #b5b5b5;
 
 $purple: #ab47bc;
 $purple-dark: #790e8b;
 $purple-light: #df78ef;
-
 $red: #ff1a1a;
 $red-dark: #d50000;
 
@@ -32,6 +39,3 @@ $teal-dark: #00af98;
 
 $yellow: #f9a825;
 $yellow-dark: #f57f17;
-
-$stone-green: #4fb341;
-$stone-green-dark: #153522;
