Switch svelte-routing with @kaisermann/svelte-router

--- a/packages/components/App/src/App.html
+++ b/packages/components/App/src/App.html
@@ -1,6 +1,6 @@
 <svelte:window on:keyup="onKeyup(event)" on:keydown="onKeydown(event)"/>
 
-<div class="app" use:links>
+<div class="app">
   <slot></slot>
 </div>
 
@@ -9,11 +9,10 @@
 </ConfirmationDialog>
 
 <script>
+  import Router from '@kaisermann/svelte-router';
   import App from '@mamba/pos/api/app.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
   import { ConfirmationDialog } from '@mamba/dialog';
-  import { createHashHistory, getHistory } from 'svelte-routing';
-  import links from 'svelte-routing/links.js';
 
   /** Return if a certain shortcut key is valid */
   const isValidShortcut = (keyName, e) =>
@@ -21,11 +20,7 @@
     e.target.tagName !== 'INPUT' &&
     document.activeElement.tagName !== 'INPUT';
 
-  /** Initialize the router hash history */
-  createHashHistory({ basename: '/' });
-
   export default {
-    actions: { links },
     components: { ConfirmationDialog },
     oncreate() {
       if (this.store) {
@@ -63,10 +58,8 @@
         App.close();
       },
       goBack() {
-        const history = getHistory();
-
-        if (history.location.pathname !== '/') {
-          history.goBack();
+        if (Router.getCurrentPath() !== '/') {
+          Router.back();
         }
       },
       /** Prevent default back/enter button behaviour */
@@ -107,7 +100,7 @@
           /** Guarantees that the 'back' button is enabled and app not locked */
           if (
             Keyboard.isBackspaceEnabled() &&
-            (this.store && !this.store.meta.get('locked'))
+            !this.store.meta.isAppLocked()
           ) {
             e.preventDefault();
             this.goBack();
